fix(plus): remove always-displayed scrollbars on article action dropdowns (#7481)

--- a/client/src/ui/organisms/article-actions/index.scss
+++ b/client/src/ui/organisms/article-actions/index.scss
@@ -18,7 +18,7 @@
   .article-actions-submenu {
     --gutter-padding: 1rem;
     display: none;
-    overflow: scroll;
+    overflow: auto;
 
     &.show {
       background: var(--background-primary);
